# tallulah-backend

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  Readme.md  entrypoint.sh  filebeat.yml  keyvault.json  package-lock.json  package.json  pyproject.toml  pytest.ini.fmt  requirements.txt  scripts.sh
.github/workflow/: build-and-push.yml  generate-client.yml
app/: main.py
app/api/: accounts.py  authentication.py  conftest.py  content_generation.py  content_generation_template.py  dashboard_templates.py  emails.py  etapestry_data.py  etapestry_repositories.py  form_data.py  form_templates.py  internal_utils.py  mailbox.py  media.py  organization.py  patient_chat.py  patient_profile.py  patient_profile_repositories.py  patient_profiles.py  patient_stories.py  response_templates.py  social_search.py  test_authentication.py  test_form_data.py  web_utils.py
app/data/: operations.py
app/migrations/: es_from_mongodb.py  org_name_to_id.py
app/models/: accounts.py  authentication.py  common.py  content_generation.py  content_generation_template.py  dashboard_templates.py  email.py  etapestry_data.py  etapestry_repositories.py  form_data.py  form_templates.py  mailbox.py  media.py  organizations.py  patient_chat.py  patient_profile.py  patient_profile_repositories.py  patient_stories.py  response_templates.py  social_search.py
app/tasks/: read_emails.py  structured_data.py
app/utils/: azure_blob_manager.py  azure_openai.py  background_couroutines.py  cache.py  daemon_thread.py  elastic_search.py  emails.py  etapestry.py  lock_store.py  log_manager.py  logging.py  message_queue.py  redis_client.py  secrets.py  shell_process.py  transcribe_audio.py  transcribe_image.py  transcribe_video.py
devops/: deploy.sh
devops/docker/logstash/: Dockerfile
devops/docker/monstache/: Dockerfile
devops/terraform/: .gitignore  Readme.md  backend.tfvars  backend_prod.tfvars  development.tfvars  main.tf  production.tfvars  providers.tf  variables.tf
devops/terraform/environments/development/: backend.tfvars  development.tfvars  main.tf  variables.tf
devops/terraform/environments/production/: main.tf  production.tfvars
devops/terraform/modules/application_gateway/: main.tf  variables.tf
devops/terraform/modules/container_apps_env/: main.tf  output.tf  variables.tf
devops/terraform/modules/keyvault/: main.tf  output.tf  variables.tf
devops/terraform/modules/private_dns_zone/: main.tf  variables.tf
devops/terraform/modules/public_ip/: main.tf  variables.tf
devops/terraform/modules/storage_account/: main.tf  output.tf  variables.tf
devops/terraform/modules/tls_certificate/: main.tf  output.tf  variables.tf
docker/: Dockerfile  Entrypoint.sh
docs/: api_guidelines.md  azure_deployments.md  mongo_atlas_restore.md  python_coding_guidelines.md  release_process.md
pipeline/: logstash.conf  monstache.toml  monstache_entrypoint.sh
postman_tests/: outlook_apis.json
services/: download_youtube.sh  export_form_to_excel.py  manual_upload_form_data.py
tests/: conftest.py  test_authentication.py  test_form_data.py  test_outlook_client.py
tests/load_test/: load_patient_profiles.py
(+17 files in other folders)
