[tool.poetry]
name = "tallulah-backend"
version = "0.1.0"
description = ""
authors = ["Prawal Gangwar <prawal@secureailabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-responses = {git = "https://github.com/secureailabs/fastapi-responses.git", rev = "0.0.1"}
python-multipart = "^0.0.6"
aiohttp = "^3.8.4"
motor = "^3.2.0"
pyyml = "^0.0.2"
pydantic = {version = "1.10.9", extras = ["email"]}
aio-pika = "^9.2.3"
msal = "^1.24.0"
fastapi-utils = "^0.2.1"
python-dotenv = "^1.0.0"
openapi-python-client = "0.15.0"
azure-keyvault-secrets = "^4.7.0"
azure-identity = "^1.14.1"
azure-storage-blob = "^12.18.3"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
tenacity = "^8.2.3"
elasticsearch = "^8.11.1"
openai = "0.28.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
