[tool.poetry]
name = "tallulah-backend"
version = "0.1.0"
description = ""
authors = ["Prawal Gangwar <prawal@secureailabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-responses = {git = "https://github.com/secureailabs/fastapi-responses.git", rev = "0.0.2"}
aiohttp = "^3.8.4"
motor = "^3.2.0"
pyyml = "^0.0.2"
pydantic = {version = "2.8.2", extras = ["email"]}
aio-pika = "^9.2.3"
msal = "^1.24.0"
fastapi-utils = "^0.7.0"
python-dotenv = "^1.0.0"
openapi-python-client = "0.21.4"
azure-keyvault-secrets = "^4.7.0"
azure-identity = "^1.14.1"
azure-storage-blob = "^12.18.3"
fastapi = {extras = ["standard"], version = "^0.112.2"}
tenacity = "^8.2.3"
elasticsearch = "^8.11.1"
openai = "^1.25.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
aiodns = "^3.1.1"
typing-inspect = "^0.9.0"
pgeocode = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
faker = "^24.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
